# KMP_BluetoothFileTransfer

./: .editorconfig  .gitignore  README.md  build.gradle.kts  settings.gradle.kts
composeApp/: build.gradle.kts
composeApp/src/androidMain/: AndroidManifest.xml
composeApp/src/androidMain/kotlin/de/schweizer/bft/: BftApplication.kt  BlueManager.kt  MainActivity.kt  PermissionManager.kt
composeApp/src/androidMain/kotlin/de/schweizer/bft/navigation/: BftNavHost.kt  Routes.kt
composeApp/src/androidMain/kotlin/de/schweizer/bft/ui/: BftApp.kt  BftAppState.kt  DeviceDiscoveryScreen.kt  DeviceDiscoveryViewModel.kt  RequestDeniedPermissionsScreen.kt  RequestEnableBluetoothScreen.kt
composeApp/src/androidMain/kotlin/de/schweizer/bft/view/: DeviceDiscoveryFragment.kt
composeApp/src/commonMain/kotlin/de/schweizer/bft/: BlueDevice.kt  BlueError.kt  BlueManager.kt  PermissionManager.kt
composeApp/src/commonMain/kotlin/de/schweizer/bft/ui/: DeviceDiscoveryScreen.common.kt  HomeScreen.kt  (+7 more)
composeApp/src/commonMain/kotlin/view/: DeviceDiscoveryScreen.kt
composeApp/src/desktopMain/kotlin/: main.kt
composeApp/src/desktopMain/kotlin/de/schweizer/bft/: Application.kt  BlueManager.kt  Logger.kt  NativeLogger.kt  PermissionManager.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
rust/: Cargo.toml
rust/.cargo/: config
rust/blue_jni/: Cargo.toml  build.rs
rust/blue_jni/.cargo/: config
rust/blue_jni/src/: android.rs  desktop.rs  lib.rs
rust/blue_jni/src/desktop/: blue_manager.rs  error.rs  logger.rs  mod.rs
rust/util/src/: lib.rs
(+7 files in other folders)
