[package]
name = "blue_jni"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.21.1", default-features = false }
android_logger = "0.13"

[target.'cfg(target_os="linux")'.dependencies]
jni = { version = "0.21.1", default-features = false }

# Dynamic Library: https://doc.rust-lang.org/reference/linkage.html
[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
phf = { version = "0.11.1", features = ["macros"] }
serde = { version = "1.0.192", features = ["derive"] }
toml = "0.8.8"
util = { path = "../util" }
log = "0.4"

[build-dependencies]
phf = { version = "0.11.1", features = ["macros"] }
serde = { version = "1.0.192", features = ["derive"] }
toml = "0.8.8"
util = { path = "../util" }
